[package]
name = "vidarshan"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.14"
csv = "1.3"
calamine = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1



